use bullseye instead of stretch for syzkaller VM

--- a/syzkaller.cfg.template
+++ b/syzkaller.cfg.template
@@ -3,8 +3,8 @@
 		"http": "127.0.0.1:56741",
 		"workdir": "{{SYZKALLER_WORKDIR}}",
 		"kernel_obj": "{{KERNEL}}",
-		"image": "{{SYZKALLER_IMG}}/stretch.img",
-		"sshkey": "{{SYZKALLER_IMG}}/stretch.id_rsa",
+		"image": "{{SYZKALLER_IMG}}/bullseye.img",
+		"sshkey": "{{SYZKALLER_IMG}}/bullseye.id_rsa",
 		"syzkaller": "{{SYZKALLER_PREFIX}}",
 		"reproduce": false,
 		"procs": 1,
